# LLFI

./: .gitignore  CMakeLists.txt  CREDITS.TXT  LICENSE.TXT  PaperLLFI.bib  PapersLLFI.txt  README.TXT  README.configurable_extension.txt  README.md  WATERS_auto_conf.sh  build.py  build_llfi.sh  caveats.txt  d2.txt  diff.txt  setup  test.rr  test.txt
runtime_lib/: AutomatedInjection.cpp  BlockedOutput.cpp  CMakeLists.txt  CPUHog.cpp  CommonFaultInjectors.cpp  DeadLock.cpp  DecreasedValue.cpp  DecreasedValue.cpp~  FaultInjectionLib.c  FaultInjectionLib.c~  FaultInjector.h  FaultInjectorManager.cpp  FaultInjectorManager.h  IncreasedValue.cpp  IncreasedValue.cpp~  InjectorScanner.cpp  InstTraceLib.c  InstTraceLib.c~  Instruction.def  LowMemory.cpp  Makefile  MemoryExhaustion.cpp  RevMode.cpp  StalePointer.cpp  ThreadKiller.cpp  Utils.c  Utils.h  WrongFormat.cpp  _FIDLSoftwareFaultInjectors.cpp  _SoftwareFaultInjectors.cpp  commonfaultinjectors.cpp  faultinjection_lib.c  instTraceLib.c  noOpen_API.cpp
runtime_lib/llvm_passes/: CMakeLists.txt  Controller.cpp  Controller.h  Controller.h~  FIRegSelector.h  FaultInjectionPass.cpp  GenLLFIIndexPass.cpp  InstTracePass.cpp  ProfilingPass.cpp  Utils.h  Utils.h~  _API_BufferOverflowInstSelector.cpp  _API_InappropriateCloseInstSelector.cpp  _API_NoOpenInstSelector.cpp  _API_No_OutputInstSelector.cpp  _API_WrongModeInstSelector.cpp  _AutoRegSelector.cpp  _Data_Incorrect_OutputInstSelector.cpp  _Data_No_OutputInstSelector.cpp  _Data_WrongPointerInstSelector.cpp  _Data_WrongSourceInstSelector.cpp  _IO_WrongRetrievedFormatInstSelector.cpp  (+12 more)
(+944 files in other folders)
